Search dependencies by any or none ambit, official or send auto!

--- a/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
@@ -3497,7 +3497,9 @@ seed.remove.permanently.alt = Eliminar definitivamente
 
 segundos = segundos
 
+select.any           = Cualquiera
 select.no            = No
+select.none          = Ninguno
 select.one.femenine  = Escoja una
 select.one.masculine = Escoja uno
 select.yes           = S\u00ED
