--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -3501,7 +3501,9 @@ seed.remove.permanently.alt = Eliminar definitivamente
 
 segundos = segundos
 
+select.any           = Cualquiera
 select.no            = No
+select.none          = Ninguno
 select.one.femenine  = Escoja una
 select.one.masculine = Escoja uno
 select.yes           = S\u00ED
