--- a/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
@@ -3498,7 +3498,9 @@ seed.remove.permanently.alt = Eliminar definitivamente
 
 segundos = segundos
 
+select.any           = Cualquiera
 select.no            = No
+select.none          = Ninguno
 select.one.femenine  = Escoja una
 select.one.masculine = Escoja uno
 select.yes           = S\u00ED
