--- a/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
@@ -2773,6 +2773,7 @@ observatory.graphic.mark.allocation.complex.title                             = 
 observatory.graphic.mark.allocation.segment.name                              = DistribucionPuntuacionesS{0}
 observatory.graphic.mark.allocation.segment.title                             = Puntuaci\u00F3n media de los sitios web: segmento {0}
 observatory.graphic.mid.puntuation                                            = Puntuaciones Medias de Resultados
+observatory.graphic.modality.by.verification.level                            = Modalidad por verificaci\u00F3n a nivel global
 observatory.graphic.modality.by.verification.level.1.category.title           = Modalidad de verificaci\u00F3n: segmento {0}. Nivel de adecuaci\u00F3n A
 observatory.graphic.modality.by.verification.level.1.name                     = ComparacionModalidadVerificacionI
 observatory.graphic.modality.by.verification.level.1.title                    = Modalidad de verificaci\u00F3n. Nivel de adecuaci\u00F3n A
