--- a/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2012B.properties
@@ -2774,6 +2774,7 @@ observatory.graphic.mark.allocation.complex.title                             = 
 observatory.graphic.mark.allocation.segment.name                              = DistribucionPuntuacionesS{0}
 observatory.graphic.mark.allocation.segment.title                             = Distribuci\u00F3n de Puntuaciones: {0}
 observatory.graphic.mid.puntuation                                            = Puntuaciones Medias de Resultados
+observatory.graphic.modality.by.verification.level                            = Modalidad por verificaci\u00F3n a nivel global
 observatory.graphic.modality.by.verification.level.1.category.title           = Comparaci\u00F3n de Modalidad por Verificaci\u00F3n: {0}. Prioridad 1
 observatory.graphic.modality.by.verification.level.1.name                     = ComparacionModalidadVerificacionI
 observatory.graphic.modality.by.verification.level.1.title                    = Comparaci\u00F3n de Modalidad por Verificaci\u00F3n. Prioridad 1
