Análisis de incidencias

--- a/portal/profiles/desarrollo/crawler.core.properties
+++ b/portal/profiles/desarrollo/crawler.core.properties
@@ -20,8 +20,8 @@ check.accessibility.default.language = es
 
 # Parametros
 mail.transport.protocol = smtp
-mail.smtp.host = smtp.fundacionctic.org
-mail.address.from = alvaro.pelaez@fundacionctic.org
+mail.smtp.host = mail.smtp2go.com
+mail.address.from = victor.cima@fundacionctic.org
 mail.address.from.name = Inteco Accessibility Validator
 mail.message.subject = Rastreador Web INTECO
 
