Fix new XLSX IRA version and file misspell.

--- a/portal/src/main/resources/__ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/__ApplicationResources-UNEEN2019.properties
@@ -773,7 +773,7 @@ gestion.complejidades.observatorio.titulo   = Gesti\u00F3n de Complejidades del 
 gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del Observatorio
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
-gestion.plantillas.observatorio.info.ira    = Actualmente desde esta secci\u00F3n se pueden gestionar las plantillas ods y xlsx de los <strong>Informe Revision Profunidad</strong> que pueden ser generados por el Servicio de Diagn\u00F3stico. Para ello es necesario crear (si no existe) una plantilla del tipo <em>ods</em> y otra del tipo <em>xlsx</em>. Estos tipos s\u00F3lo se usar\u00E1n en la generaci\u00F3n de los <em>Informe Revision Profunidad</em> y <strong>s\u00F3lo se permite la creaci\u00F3n de una plantilla de cada uno de estos tipos</strong>.
+gestion.plantillas.observatorio.info.ira    = Actualmente desde esta secci\u00F3n se pueden gestionar las plantillas ods y xlsx de los <strong>Informe Revision Profundidad</strong> que pueden ser generados por el Servicio de Diagn\u00F3stico. Para ello es necesario crear (si no existe) una plantilla del tipo <em>ods</em> y otra del tipo <em>xlsx</em>. Estos tipos s\u00F3lo se usar\u00E1n en la generaci\u00F3n de los <em>Informe Revision Profundidad</em> y <strong>s\u00F3lo se permite la creaci\u00F3n de una plantilla de cada uno de estos tipos</strong>.
 gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
 gestion.ranges.observatorio.titulo          = Gesti\u00F3n de rangos de comparaci\u00F3n de evoluci\u00F3n a nivel de sitio web
 gestion.reducciontablas.observatorio.titulo = Reducci\u00F3n de Tablas del Observatorio
@@ -1079,7 +1079,7 @@ mensaje.error.numMax.rastreo                                  = El n\u00FAmero m
 mensaje.error.permisos                                        = No tiene permisos para realizar la acci\u00F3n seleccionada
 mensaje.error.range.format                                    = Los rangos se definen de la siguiente manera: (valor inferior) (<;<=;nada) x (<;<=;nada) (valor superior). Es necesario especificar al menos un par valor-operador (inferior o superior)
 mensaje.error.tMaxEspera.superado                             = Tiempo m\u00E1ximo de espera superado. Es posible que la acci\u00F3n no se haya realizado correctamente. Compruebe el estado de los rastreos en el listado y en caso de error, contacte con el Administrador.
-mensaje.error.type.plantilla.duplicado                        = Ya existe una plantilla del tipo ods o xlsx. De estos formatos s\u00F3lo se puede almacenar una plantilla <em>Informe Revision Profunidad</em>
+mensaje.error.type.plantilla.duplicado                        = Ya existe una plantilla del tipo ods o xlsx. De estos formatos s\u00F3lo se puede almacenar una plantilla <em>Informe Revision Profundidad</em>
 mensaje.exito.cartucho.desinstalado                           = Cartucho Desinstalado con exito. 
 mensaje.exito.cartucho.eliminado                              = Cartucho Eliminado con exito. 
 mensaje.exito.cartucho.instalado                              = Cartucho Instalado con exito. 
