--- a/portal/profiles/docker/crawler.properties
+++ b/portal/profiles/docker/crawler.properties
@@ -88,8 +88,8 @@ export.open.office.template.une.2012b.CCAA = ${deploy.path}/WEB-INF/templatesODT
 export.open.office.template.une.2012b.AGE = ${deploy.path}/WEB-INF/templatesODT/Plantilla_AGE_UNE_2012_B_embed.odt
 export.open.office.template.une.2012b.EELL = ${deploy.path}/WEB-INF/templatesODT/Plantilla_EELL_UNE_2012_B.odt
 
-export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profundidad_v1.ods
-export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profundidad_v1.xlsx
+export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe Revision Accesibilidad - Sitios web - v2.0.0.ods
+export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe Revision Accesibilidad - Sitios web - v2.0.0.xlsx
 
 export.open.office = ${files.path}/exports/openOffice/
 
