--- a/portal/profiles/integracion/crawler.properties
+++ b/portal/profiles/integracion/crawler.properties
@@ -90,8 +90,8 @@ export.open.office.template.une.2012b.EELL = ${deploy.path}/WEB-INF/templatesODT
 
 export.open.office.template.common.accesibility.evol.ambit = ${deploy.path}/WEB-INF/templatesODT/Generica_Accesibilidad_Evol_Ambits.odt
 
-export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profundidad_v1.ods
-export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe_Revision_Profundidad_v1.xlsx
+export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe Revision Accesibilidad - Sitios web - v2.0.0.ods
+export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe Revision Accesibilidad - Sitios web - v2.0.0.xlsx
 
 export.open.office = ${files.path}/exports/openOffice/
 
