feat: Dockerizing oaw
Dockerizing oaw.
Delete unnecessary files.

--- a/portal/profiles/docker/mail.properties
+++ b/portal/profiles/docker/mail.properties
@@ -16,7 +16,8 @@ mail.address.from       = oaw@fundacionctic.org
 mail.address.from.name  = Validador Accesibilidad
 mail.message            = Informe del rastreo efectuado el d\u00EDa {0} para la entidad {1} por el Rastreador Web de MINHAP. Se han rastreado los dominios {2}
 mail.message.subject    = Rastreador Web MINHAP
-mail.smtp.host          = smtp.fundacionctic.org
+mail.smtp.host          = mailhog
+mail.smtp.port          = 1025
 mail.smtp.tls           = false
 mail.transport.protocol = smtp
 
