--- a/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
@@ -2916,7 +2916,7 @@ pdf.accessibility.bs.warnings                                   = Advertencias
 pdf.accessibility.code                                          = C\u00F3digo
 pdf.accessibility.column                                        = Columna
 pdf.accessibility.cover.notice.1                                = Informe emitido bajo demanda
-pdf.accessibility.cover.notice.2                                = El resumen de resultados reflejados en este informe contiene datos ESTIMADOS. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2022. Este documento NO constituye el \u201CInforme de Revisi\u00F3n de la Accesibilidad\u201D que se deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
+pdf.accessibility.cover.notice.2                                = El resumen de resultados reflejados en este informe contiene datos ESTIMADOS. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301549:2022. Este documento NO constituye el \u201CInforme de Revisi\u00F3n de la Accesibilidad\u201D que se deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
 pdf.accessibility.cover.type.source                             = C\u00D3DIGO FUENTE\n{0}
 pdf.accessibility.cover.type.url                                = SITIO WEB\n{0}
 pdf.accessibility.cover.type.url.list                           = LISTA DE P\u00C1GINAS
@@ -2932,7 +2932,7 @@ pdf.accessibility.global.evolution.warningA.title               = Evoluci\u00F3n
 pdf.accessibility.global.evolution.warningAA.title              = Evoluci\u00F3n: Media de Advertencias. AA.
 pdf.accessibility.global.priority.incidence                     = Incidencias Por Prioridad Global
 pdf.accessibility.global.summary.globals                        = Resultados globales
-pdf.accessibility.global.summary.info                           = Los niveles de adecuaci\u00F3n de verificaci\u00F3n, p\u00E1gina y sitio web, as\u00ED como la situaci\u00F3n de cumplimiento del sitio web, son una estimaci\u00F3n en base a unas verificaciones autom\u00E1ticas. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2022 para determinar el nivel de adecuaci\u00F3n REAL del sitio web.
+pdf.accessibility.global.summary.info                           = Los niveles de adecuaci\u00F3n de verificaci\u00F3n, p\u00E1gina y sitio web, as\u00ED como la situaci\u00F3n de cumplimiento del sitio web, son una estimaci\u00F3n en base a unas verificaciones autom\u00E1ticas. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301549:2022 para determinar el nivel de adecuaci\u00F3n REAL del sitio web.
 pdf.accessibility.global.summary.p1                             = En este apartado se muestran los resultados globales del sitio web calculados de acuerdo a la metodolog\u00EDa actual del Observatorio de Accesibilidad Web. Los resultados calculados son los siguientes:
 pdf.accessibility.global.summary.p2                             = La {0} refleja la cantidad de verificaciones de accesibilidad que se satisfacen correctamente, ya sean de nivel de adecuaci\u00F3n A o AA. Por lo tanto, cuanta m\u00E1s alta sea la puntuaci\u00F3n, m\u00E1s verificaciones de accesibilidad se est\u00E1n cumpliendo.
 pdf.accessibility.global.summary.p2.bold                        = puntuaci\u00F3n media del sitio web
@@ -2947,7 +2947,7 @@ pdf.accessibility.index.global.evolution                        = EVOLUCI\u00D3N
 pdf.accessibility.index.global.summary                          = RESUMEN GLOBAL
 pdf.accessibility.index.title                                   = \u00CDNDICE
 pdf.accessibility.info                                          = Observaci\u00F3n
-pdf.accessibility.info.estimated                                = El resumen de resultados reflejados en este informe contiene datos ESTIMADOS. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2022.\n  \nEste documento NO constituye el \u201CInforme de Revisi\u00F3n de la Accesibilidad\u201D que se deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
+pdf.accessibility.info.estimated                                = El resumen de resultados reflejados en este informe contiene datos ESTIMADOS. Es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301549:2022.\n  \nEste documento NO constituye el \u201CInforme de Revisi\u00F3n de la Accesibilidad\u201D que se deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
 pdf.accessibility.infos                                         = Observaciones
 pdf.accessibility.intro.how.p1                                  = En primer lugar es necesario comentar, que junto con este informe de accesibilidad web, tambi\u00E9n se recibe un archivo {0}, que contiene el c\u00F3digo en base al cual se ha realizado la evaluaci\u00F3n de accesibilidad y se han detectado los errores. El archivo contiene una carpeta por cada p\u00E1gina analizada, y dentro de la cual se almacena el c\u00F3digo HTML, el archivo CSS y las referencias de la p\u00E1gina en cuesti\u00F3n. 
 pdf.accessibility.intro.how.p1.accesibility.list1               = el c\u00F3digo fuente de la p\u00E1gina web analizada (el c\u00F3digo HTML, el archivo CSS y las referencias de la p\u00E1gina) que se ha pasado como argumento en el formulario del servicio de diagn\u00F3stico en l\u00EDnea y sobre la que se ha realizado al menos una de las comprobaciones autom\u00E1ticas de las verificaciones que componen la metodolog\u00EDa de la Declaraci\u00F3n de Accesibilidad (Presencia de la declaraci\u00F3n de accesibilidad).
@@ -3031,7 +3031,7 @@ pdf.accessibility.intro.next.basic.service.list.3.bold8         = cambios sustan
 pdf.accessibility.intro.next.basic.service.list.4               = En cualquier caso, esta revisi\u00F3n deber\u00EDa ser complementada para considerar {0} tanto de {1}. Como material de ayuda para complementar la evaluaci\u00F3n puede consultar la [anchor1] web disponible en el PAe, que entre otras cuestiones, contiene una relaci\u00F3n de herramientas gratuitas para apoyarse en la realizaci\u00F3n de ese proceso.
 pdf.accessibility.intro.next.basic.service.list.4.anchor1.text  = Gu\u00EDa de validaci\u00F3n de accesibilidad
 pdf.accessibility.intro.next.basic.service.list.4.anchor1.url   = https://administracionelectronica.gob.es/pae_Home/dam/jcr:bf784fe3-d673-4e44-8cd3-b818b6293280/Guia_de_Validacion_de_Accesibilidad_Web_v2_0.pdf
-pdf.accessibility.intro.next.basic.service.list.4.bold1         = todos los requisitos de accesibilidad de la UNE-EN 301 549:2022
+pdf.accessibility.intro.next.basic.service.list.4.bold1         = todos los requisitos de accesibilidad de la UNE-EN 301549:2022
 pdf.accessibility.intro.next.basic.service.list.4.bold2         = revisi\u00F3n autom\u00E1tica como manual
 pdf.accessibility.intro.next.basic.service.p1                   = Con el objetivo de ayudar al destinatario de este informe, a continuaci\u00F3n se indican los pasos a realizar tras recibir el informe:
 pdf.accessibility.intro.next.list.1                             = {0} indicados en este informe en el apartado Incidencias de cada p\u00E1gina. Dicho apartado contiene un resumen de las incidencias detectadas.  Para conocer dichos errores en detalle, as\u00ED como posibles soluciones, deber\u00E1 ayudarse del servicio de diagn\u00F3stico en l\u00EDnea del Observatorio, al que se accede a trav\u00E9s de la [anchor1]. Se podr\u00E1n solicitar tantos informes de accesibilidad web como se necesiten y para todas las p\u00E1ginas que se deseen analizar del sitio web.
@@ -3057,7 +3057,7 @@ pdf.accessibility.intro.next.list.3.bold8                       = cambios sustan
 pdf.accessibility.intro.next.list.4                             = Por tanto, si en base a lo comentado, el destinatario de este informe debiera realizar una revisi\u00F3n de accesibilidad (seg\u00FAn el art\u00EDculo 17 del RD) podr\u00EDa tomar como punto de partida la evaluaci\u00F3n realizada por el servicio de diagn\u00F3stico en l\u00EDnea del Observatorio. Pero siempre deber\u00E1 complementarla para el resto de requisitos, y adem\u00E1s, con las revisiones manuales que apliquen para los requisitos revisado autom\u00E1ticamente. Como material de ayuda para realizar la revisi\u00F3n de accesibilidad se puede consultar la [anchor1] web disponible en el PAe.
 pdf.accessibility.intro.next.list.4.anchor1.text                = Gu\u00EDa de validaci\u00F3n de accesibilidad
 pdf.accessibility.intro.next.list.4.anchor1.url                 = https://administracionelectronica.gob.es/pae_Home/dam/jcr:bf784fe3-d673-4e44-8cd3-b818b6293280/Guia_de_Validacion_de_Accesibilidad_Web_v2_0.pdf
-pdf.accessibility.intro.next.list.4.bold1                       = todos los requisitos de accesibilidad de la UNE-EN 301 549:2022
+pdf.accessibility.intro.next.list.4.bold1                       = todos los requisitos de accesibilidad de la UNE-EN 301549:2022
 pdf.accessibility.intro.next.list.4.bold2                       = revisi\u00F3n autom\u00E1tica como manual
 pdf.accessibility.intro.next.p1                                 = Con el objetivo de ayudar al destinatario de este informe, a continuaci\u00F3n se indican los pasos a realizar tras recibir el informe:
 pdf.accessibility.intro.next.title                              = Pasos a seguir tras recibir el informe
@@ -3075,9 +3075,9 @@ pdf.accessibility.intro.p3.anchor1.text                         = Decisi\u00F3n 
 pdf.accessibility.intro.p3.anchor1.url                          = https://eur-lex.europa.eu/legal-content/ES/TXT/?uri=uriserv:OJ.L_.2018.256.01.0108.01.SPA&toc=OJ:L:2018:256:FULL
 pdf.accessibility.intro.p3.bold1                                = ofrece una estimaci\u00F3n de la situaci\u00F3n en la que se encuentra la declaraci\u00F3n de accesibilidad del  sitio web analizado.
 pdf.accessibility.intro.p4                                      = El Observatorio de Accesibilidad Web ha desarrollado la [anchor1], utilizada por el estado espa\u00F1ol para aplicar el seguimiento simplificado, desarrollada en base a la norma espa\u00F1ola UNE-EN 301549:2022 Requisitos de accesibilidad para productos y servicios TIC, que es la traducci\u00F3n espa\u00F1ola de la norma [anchor2]. Estas normas est\u00E1n a su vez alineadas con las WCAG 2.1 del W3C.
-pdf.accessibility.intro.p4.anchor1.text                         = Metodolog\u00EDa de Seguimiento Simplificado UNE-EN301549:2022
+pdf.accessibility.intro.p4.anchor1.text                         = Metodolog\u00EDa de Seguimiento Simplificado UNE-EN 301549:2022
 pdf.accessibility.intro.p4.anchor1.url                          = http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaSimplificado
-pdf.accessibility.intro.p4.anchor2.text                         = EN 301 549 V3.2.1 (2021-03) Requisitos de accesibilidad para los productos y servicios de las TIC
+pdf.accessibility.intro.p4.anchor2.text                         = EN 301549 V3.2.1 (2021-03) Requisitos de accesibilidad para los productos y servicios de las TIC
 pdf.accessibility.intro.p4.anchor2.url                          = https://www.etsi.org/deliver/etsi_en/301500_301599/301549/03.02.01_60/en_301549v030201p.pdf
 pdf.accessibility.intro.p4.bold                                 = esto permite estimar el grado de cumplimiento en t\u00E9rminos de accesibilidad de su sitio web.\u0009\u0009\u0009\u0009
 pdf.accessibility.intro.p5                                      = En este documento, recibe la revisi\u00F3n realizada por el Observatorio de Accesibilidad Web en el marco del seguimiento simplificado {0}
@@ -3133,7 +3133,7 @@ pdf.accessibility.seed.detail.tabla.tematica                    = Tem\u00E1tica
 pdf.accessibility.seed.detail.tabla.titulo                      = Detalles del sitio web
 pdf.accessibility.seed.detail.title                             = Detalles del sitio web analizado
 pdf.accessibility.subtitle                                      = SEGUIMIENTO SIMPLIFICADO\nUNE-EN 301549:2022
-pdf.accessibility.summary.info                                  = Los datos reflejados son ESTIMATIVOS. Para conocer la situaci\u00F3n REAL es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301 549:2022.
+pdf.accessibility.summary.info                                  = Los datos reflejados son ESTIMATIVOS. Para conocer la situaci\u00F3n REAL es SIEMPRE necesaria una revisi\u00F3n manual experta complementando todos los requisitos de UNE-EN 301549:2022.
 pdf.accessibility.summary.table.evolution                       = Evoluci\u00F3n
 pdf.accessibility.summary.table.evolution.equal                 = se mantiene
 pdf.accessibility.summary.table.evolution.improve               = mejora
@@ -3142,7 +3142,7 @@ pdf.accessibility.summary.table.pm                              = Puntuaci\u00F3
 pdf.accessibility.summary.table.result                          = Resultado
 pdf.accessibility.title                                         = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.title.basic.service                           = INFORME DE\nACCESIBILIDAD WEB
-pdf.accessibility.title.basic.service.2                         = SEGUIMIENTO SIMPLIFICADO\nUNE-EN301549:2022
+pdf.accessibility.title.basic.service.2                         = SEGUIMIENTO SIMPLIFICADO\nUNE-EN 301549:2022
 pdf.accessibility.warning                                       = Advertencia
 pdf.accessibility.warnings                                      = Advertencias
 pdf.error.no.results                                            = No se ha podido generar el informe PDF. El rastreo no tiene resultados asociados.
