[#3184] Individual PDF files - DISTORTED EVOLUTION - Change of Recurrence

--- a/portal/src/main/resources/__ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/__ApplicationResources-UNEEN2019.properties
@@ -3110,6 +3110,7 @@ pdf.accessibility.summary.table.evolution.improve               = mejora
 pdf.accessibility.summary.table.evolution.worse                 = empeora
 pdf.accessibility.summary.table.pm                              = Puntuaci\u00F3n Media del Sitio web
 pdf.accessibility.summary.table.result                          = Resultado
+pdf.accessibility.summary.table.nodata                          = Sin datos
 pdf.accessibility.title                                         = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.title.basic.service                           = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.title.basic.service.2                         = SEGUIMIENTO SIMPLIFICADO\nUNE-EN301549:2019
