--- a/portal/src/main/resources/ApplicationResources_xx_XX_ACC.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_ACC.properties
@@ -3146,6 +3146,7 @@ pdf.accessibility.summary.table.evolution.improve               = mejora
 pdf.accessibility.summary.table.evolution.worse                 = empeora
 pdf.accessibility.summary.table.pm                              = Puntuaci\u00F3n Media del Sitio web
 pdf.accessibility.summary.table.result                          = Resultado
+pdf.accessibility.summary.table.nodata                          = Sin datos
 pdf.accessibility.title                                         = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.title.basic.service                           = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.title.basic.service.2                         = COMPROBACI\u00D3N DECLARACI\u00D3N DE ACCESIBILIDAD
