--- a/portal/profiles/desarrollo/crawler.properties
+++ b/portal/profiles/desarrollo/crawler.properties
@@ -98,8 +98,8 @@ export.open.office.template.common.complexities = ${deploy.path}/WEB-INF/templat
 
 export.open.office.template.common.accesibility.evol.ambit = ${deploy.path}/WEB-INF/templatesODT/Generica_Accesibilidad_Evol_Ambits.odt
 
-export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe Revision Accesibilidad - Sitios web - v2.0.0.ods
-export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe Revision Accesibilidad - Sitios web - v2.0.0.xlsx
+export.ods.template = ${deploy.path}/WEB-INF/templatesODT/Informe Revision Accesibilidad - Sitios web.ods
+export.xlsx.template = ${deploy.path}/WEB-INF/templatesODT/Informe Revision Accesibilidad - Sitios web.xlsx
 
 export.open.office = ${files.path}/exports/openOffice/
 
@@ -207,7 +207,7 @@ debug.checks = false
 debug.checks.file = ${files.path}/debug/debug_checks.csv
 
 # Par\u00E1metros del servicio b\u00E1sico
-basic.service.url = http://localhost:8080/oaw/basicServiceAction.do
+basic.service.url = http://localhost:8765/oaw/basicServiceAction.do
 basic.service.post.request = url={0}&correo={1}&profundidad={2}&amplitud={3}&informe={4}&usuario={5}&action={6}&id={7}&content={8}&inDirectory={9}
 basic.service.max.num.concurrent.users = 8
 basic.service.num.retries.check.concurrence = 200
