First version of mixed diagnostics services: urls and code

--- a/portal/src/main/resources/.properties
+++ b/portal/src/main/resources/.properties
@@ -2783,6 +2783,7 @@ pdf.accessibility.cover.notice.2                                = El resumen de 
 pdf.accessibility.cover.type.source                             = C\u00D3DIGO FUENTE\n{0}
 pdf.accessibility.cover.type.url                                = SITIO WEB\n{0}
 pdf.accessibility.cover.type.url.list                           = LISTA DE P\u00C1GINAS
+pdf.accessibility.cover.type.mix                                = LISTA DE P\u00C1GINAS Y C\u00D3DIGO FUENTE
 pdf.accessibility.date                                          = Fecha:
 pdf.accessibility.domain                                        = Dominio:
 pdf.accessibility.entity                                        = Entidad:
@@ -2996,6 +2997,7 @@ pdf.accessibility.summary.table.evolution.improve               = mejora
 pdf.accessibility.summary.table.evolution.worse                 = empeora
 pdf.accessibility.summary.table.pm                              = Puntuaci\u00F3n Media del Sitio web
 pdf.accessibility.summary.table.result                          = Resultado
+pdf.accessibility.summary.table.nodata                          = Sin datos
 pdf.accessibility.title                                         = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.title.basic.service                           = INFORME DE\nACCESIBILIDAD WEB
 pdf.accessibility.title.basic.service.2                         = SEGUIMIENTO SIMPLIFICADO\nUNE-EN301549:2019
