--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -848,6 +848,18 @@ importar.semillas.info                        = Se ha procesado correctamente el
 importar.semillas.info2                       = \u00BFDesea continuar con la importaci\u00F3nn? Se proceder\u00E1 a la modificaci\u00F3n/creaci\u00F3n de las semillas indicas. Esta acci\u00F3n <strong>no se puede deshacer</strong> 
 importar.semillas.title                       = Importaci\u00F3n masiva de semillas
 
+importar.entidades.titulo                     = Resultado importación entidades
+importar.entidades.exito                      = Entidades importadas con éxito
+importar.entidades.error                      = Error al importar entidades
+importar.entidades.ambitos                    = Ámbitos
+importar.entidades.complejidades              = Complejidades
+importar.entidades.dependencias               = Dependencias
+importar.entidades.etiquetas                  = Etiquetas
+importar.entidades.segmentos                  = Segmentos
+importar.entidades.semillas                   = Semillas 
+importar.entidades.tiposEtiqueta              = Tipos de etiqueta
+importar.entidades.tiposSemilla               = Tipos de semilla
+
 indice.cartuchos.accion.borrar                             = Eliminar Cartucho
 indice.cartuchos.accion.desinstalar                        = Desinstalar Cartucho
 indice.cartuchos.accion.instarlar                          = Instalar Cartucho
