Import/Export Improvements

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -178,6 +178,7 @@ application.title.semillas           = RASTREADOR WEB - Semillas
 application.title.termino.categorias = RASTREADOR WEB - T\u00E9rminos
 application.title.usuarios           = RASTREADOR WEB - Usuarios
 application.title.importacion   	 = RASTREADOR WEB - Importar entidades desde el SSP
+application.title.exportacion   	 = RASTREADOR WEB - Exportar entidades desde el Rastreador
 
 archivo.existe           = El archivo ya existe.
 archivo.inexistente      = Archivo inexistente.
@@ -765,6 +766,8 @@ exito.informacion          = Informaci\u00F3n
 export.to.pdf.title                    = Exportar los resultados del rastreo a formato PDF
 
 exportar.resultados.observatorio.title = Exportar los resultados del Observatorio
+exportar.backup.entidades = Generación de backup de entidades
+exportar.entidades.exito  = Entidades exportadas con éxito
 
 fallo.cuenta.cliente = Fallo al crear cuenta cliente.
 fallo.observatorio   = Fallo al crear el obnservatorio.
@@ -1244,7 +1247,9 @@ menuadmin.servicio_diagnostico.title          = Acceder a la gesti\u00F3n del se
 menuadmin.usuarios                            = Usuarios
 menuadmin.usuarios.title                      = Acceder a la parte de gesti\u00F3n de usuarios
 menuadmin.importar.entidades                  = Importar Entidades
+menuadmin.exportar.entidades                  = Exportar Entidades
 menuadmin.importar.title                      = Acceder a la parte de Importaci\u00F3n de datos del SSP
+menuadmin.exportar.title					  = Acceder a la parte de Exportaci\u00F3n de datos del Rastreador
 
 menuclient.rastreos              = Rastreos de cliente
 menuclient.rastreos.cuenta       = Cuentas de cliente
@@ -1439,6 +1444,7 @@ migas.ver.observatorio                                   = Detalles
 migas.ver.rastreo                                        = Ver Rastreo
 migas.ver.usuario                                        = Ver Usuario
 migas.importar.entidad                                   = Importar entidades
+migas.exportar.entidad									 = Exportar entidades
 migas.other.options                                      = Otras opciones
 
 # PAUTAS OBSERVATORIO UNE 2012
