[#5551] Aggregate report and Global report bad data last iteration

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -1246,6 +1246,7 @@ menuadmin.servicio_diagnostico                = Servicio diagn\u00F3stico
 menuadmin.servicio_diagnostico.title          = Acceder a la gesti\u00F3n del servicio de diagn\u00F3stico
 menuadmin.usuarios                            = Usuarios
 menuadmin.usuarios.title                      = Acceder a la parte de gesti\u00F3n de usuarios
+menuadmin.backup.entidades                    = Backup Entidades 
 menuadmin.importar.entidades                  = Importar Entidades
 menuadmin.exportar.entidades                  = Exportar Entidades
 menuadmin.importar.title                      = Acceder a la parte de Importaci\u00F3n de datos del SSP
