# WARNING: head commit changed in the meantime
Versión 5.7.0

--- a/crawler/profiles/desarrollo/crawler.core.properties
+++ b/crawler/profiles/desarrollo/crawler.core.properties
@@ -61,7 +61,7 @@ amplitud.ilimitada.value = 0
 method.accept.header = text/html
 method.accept.language.header = es,en;q=0.8,es-es;q=0.5,en-us;q=0.3
 #method.user.agent.header = Mozilla/5.0 (Windows; U; Windows NT 5.1; es-ES; rv\:1.9.1.3) Gecko/20090915 Firefox/3.5.3 (.NET CLR 3.5.30729) 
-method.user.agent.header = Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.169 Safari/537.36
+method.user.agent.header = Mozilla/5.0 (Windows NT 10.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36
 
 
 http.proxy.active = false
