--- a/portal/profiles/docker/crawler.properties
+++ b/portal/profiles/docker/crawler.properties
@@ -422,3 +422,4 @@ verification.id.reg.exp = (\\d\\.\\d\\.\\d)
 
 # Exportaci\u00F3n de anexos
 export.annex.path =${files.path}/exports/anexos/
+export.annex.send.path =${files.path}/exports/anexos/send/
