--- a/docker/nginx/reverse.conf
+++ b/docker/nginx/reverse.conf
@@ -1,7 +1,7 @@
 upstream renderer-server  {
-  server docker-renderer-1:3000;
-  server docker-renderer-2:3000;
-  server docker-renderer-3:3000;
+  server docker_renderer_1:3000;
+  server docker_renderer_2:3000;
+  server docker_renderer_3:3000;
 }
 
 server {
