--- a/portal/src/main/resources/role.properties
+++ b/portal/src/main/resources/role.properties
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (C) 2012 INTECO, Instituto Nacional de Tecnologías de la Comunicación, 
+# Copyright (C) 2012 INTECO, Instituto Nacional de Tecnologï¿½as de la Comunicaciï¿½n, 
 # This program is licensed and may be used, modified and redistributed under the terms
 # of the European Public License (EUPL), either version 1.2 or (at your option) any later 
 # version as soon as they are approved by the European Commission.
@@ -64,6 +64,12 @@ show.crawler.report = 1;2;3;4;5
 export.crawler.report = 1;2;3;4;5
 show.crawler.graphics = 1;2;3;4;5
 show.crawler.results = 1;2;3;4;5
+
+load.apiKeys = 1
+view.apiKeys = 1
+edit.apiKeys = 1
+new.apiKeys = 1
+delete.apiKeys = 1
 
 add.certificate = 1;2
 
