--- a/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
+++ b/portal/src/main/resources/ApplicationResources_xx_XX_2019.properties
@@ -1231,6 +1231,8 @@ menuadmin.servicio_diagnostico                = Servicio diagn\u00F3stico
 menuadmin.servicio_diagnostico.title          = Acceder a la gesti\u00F3n del servicio de diagn\u00F3stico
 menuadmin.usuarios                            = Usuarios
 menuadmin.usuarios.title                      = Acceder a la parte de gesti\u00F3n de usuarios
+menuadmin.apikeys.title                       = Gestión de Apikeys
+menuadmin.apikeys                             = Gestión de Apikeys   
 
 menuclient.rastreos              = Rastreos de cliente
 menuclient.rastreos.cuenta       = Cuentas de cliente
